# stellar-mosaic

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
backend/: .gitignore  Cargo.toml  README.md
backend/src/: auth.rs  base_deploy.rs  base_shield.rs  catalog.rs  config.rs  db.rs  deploy.rs  durable_indexer.rs  error.rs  handlers.rs  indexer.rs  main.rs  models.rs  operations.rs  prove.rs  stellar.rs  validate.rs
backend/vks/: join_vk  lift_vk  match_vk
bridge-prover/: Cargo.toml  README.md  image-id.hex  run-host  rust-toolchain.toml
bridge-prover/host/: Cargo.toml
bridge-prover/host/src/: main.rs
bridge-prover/host/tests/: cli.rs
bridge-prover/methods/: Cargo.toml
bridge-prover/methods/guest/: Cargo.toml
bridge-prover/methods/guest/src/: main.rs
bridge-prover/tests/: image-id-preflight.sh  run-host.sh
bridge-prover/tests/fixtures/: fake-cargo  fake-host
circuits/cancel/: Nargo.toml  Prover.toml
circuits/cancel/src/: main.nr
circuits/join/: Nargo.toml  Prover.toml
circuits/join/src/: main.nr
circuits/lift/: Nargo.toml  Prover.toml
circuits/lift/src/: main.nr
circuits/match/: Nargo.toml  Prover.toml
circuits/match/src/: main.nr
circuits/mosaic/: Nargo.toml
circuits/mosaic/src/: lib.nr
circuits/spend/: Nargo.toml  Prover.toml
circuits/spend/src/: main.nr
circuits/unshield/: Nargo.toml  Prover.toml
circuits/unshield/src/: main.nr
circuits/wallet/compress/: Nargo.toml
circuits/wallet/join_terms/: Nargo.toml
circuits/wallet/note_tag/: Nargo.toml  Prover.toml
circuits/wallet/order_terms/: Nargo.toml  Prover.toml
contracts/groth16_spike/: Cargo.toml  README.md
contracts/groth16_spike/src/: lib.rs
contracts/groth16_spike/tests/: spike.rs
contracts/settlement/: Cargo.toml
contracts/settlement/src/: lib.rs
contracts/settlement/tests/: base_shield.rs  book.rs  book.rs.wip  e2e_demo.rs  events.rs  events.rs.wip  integration.rs  integration.rs.wip  join.rs  join.rs.wip  ws4.rs
contracts/settlement/tests/fixtures/: owner_tag_a  owner_tag_b  owner_tag_exa  owner_tag_exb  owner_tag_u  proof_a  proof_b  proof_exa  proof_exb  public_inputs_a  public_inputs_b  public_inputs_exa  public_inputs_exb  regen.sh  unshield_proof  unshield_public_inputs
contracts/settlement/tests/fixtures/book/: cancel_proof  cancel_public_inputs  cancel_vk  owner_tag_b1  owner_tag_s1  owner_tag_s2  owner_tag_s3  proof_b1  proof_s1  proof_s2  proof_s3  public_inputs_b1  public_inputs_s1  public_inputs_s2  public_inputs_s3
contracts/settlement/tests/fixtures/demo/: owner_tag_a  owner_tag_b  proof_a  proof_b  public_inputs_a  public_inputs_b  unshield_proof  unshield_public_inputs  vk
contracts/settlement/tests/fixtures/join/: join_proof  join_public_inputs  join_vk  owner_tag_a  owner_tag_b
contracts/settlement/tests/fixtures/ws4/: cancel_note_tag  cancel_pi  cancel_place_pi  cancel_place_proof  cancel_proof  cancel_vk  join_pi  join_proof  join_vk  life_unshield_pi  life_unshield_proof  lift_vk  match_pi  match_proof  match_vk  mk_note_tag  mk_place_pi  mk_place_proof  place_proof  place_public_inputs  regen.py  tk_note_tag  tk_place_pi  tk_place_proof  unshield_pi  unshield_proof  unshield_vk  wm0_place_pi  wm0_place_proof  wm1_place_pi  wm1_place_proof  wm2_place_pi  wm2_place_proof  wmatch_m0_tag  wmatch_m1_tag  wmatch_m2_tag  wmatch_pi  wmatch_proof  wmatch_t_tag  wt_place_pi  (+1 more)
docs/: architecture.md  base-bridge.md  benchmarks.md  e2e-testing.md  full-flow-review.md  implementation.md  lift-circuit-spec.md  milestone-0-results.md  noir-matching.md  note-types.md  order-book.md  poseidon-tree-spike.md  privacy-model.md  roadmap.md  settlement-design.md  shared-merkle-tree.md  simple-order-book.md  storage-durability.md  tx-instruction-limit-spike.md  ui-ux.md  web-app.md
evm/: README.md  foundry.toml
evm/script/: Deploy.s.sol
evm/src/: MosaicBridge.sol
evm/test/: MosaicBridge.t.sol
evm/test/mocks/: MockUSDC.sol
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: protocol-release.json  settlement.wasm
frontend/public/circuits/: cancel.json  compress.json  join.json  join_terms.json  lift.json  match.json  note_tag.json  order_terms.json  unshield.json
frontend/public/vks/: unshield_vk
frontend/src/: ActivityContext.tsx  App.tsx  EthereumWalletContext.tsx  MosaicServerContext.tsx  RecoveryContext.tsx  StorageModeContext.tsx  ThemeContext.tsx  WalletContext.tsx  actionCache.ts  activityModel.test.ts  activitySync.test.ts  amount.ts  api.ts  auth.ts  base.ts  baseDeployment.test.ts  baseDeployment.ts  bookIndexer.ts  config.ts  crypto.ts  defaultCatalog.ts  deskShare.test.ts  deskShare.ts  directTransaction.ts  index.css  main.tsx  noir.ts  noirWasm.ts  notes.ts  operationExecutor.ts  orchestrate.ts  orderPlan.ts  prove.ts  recovery.ts  soroban.ts  storageMode.test.ts  time.ts  trustless.ts  useBookIndex.ts  wallet.ts
frontend/src/components/: ActivityDrawer.tsx  ActivityGroupList.tsx  AddAssetForm.tsx  AssetList.tsx  BaseDeploymentPanel.tsx  BookView.tsx  CancelOrderButton.tsx  ConsolidateForm.tsx  CreateDeskForm.tsx  DeskShareButton.tsx  ImportDeskForm.tsx  OrderBook.tsx  OrderForm.tsx  RecoveryPanel.tsx  ShieldForm.tsx  ShieldFromBaseForm.tsx  ShieldUnshieldPanel.tsx  Toasts.tsx  UnshieldForm.tsx  activityModel.ts
frontend/src/pages/: ActivityPage.tsx  AssetsPage.tsx  DeskPage.tsx  Home.tsx  SettingsPage.tsx
frontend/src/sdk/: activitySync.ts  freighterSigner.ts  indexedDbStore.ts
frontend/src/styles/: base.css  tokens.css  (+1 more)
scripts/: 00_rebuild_all.sh  01_build_prove.sh  02_deploy_verify_testnet.sh  03_demo_e2e.sh  04_demo_e2e_testnet.sh  05_gen_book_fixtures.sh  06_book_budget_testnet.sh  07_book_worstcase_testnet.sh  08_build_web_artifacts.sh  09_gen_join_fixtures.sh  10_demo_base_shield_testnet.sh  e2e.sh  gen_worstcase_fixtures.sh
scripts/lib/: bridge_image_id.sh  e2e_state.sh
tools/indexer/: Cargo.toml  README.md
tools/indexer/src/: lib.rs
(+14 files in other folders)
