[package]
name = "mosaic-backend"
version = "0.1.0"
edition = "2021"
description = "Web backend for Stellar Mosaic: desk registry + fully-sponsored relayer for the settlement contract."

[[bin]]
name = "mosaic-backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "sqlite", "postgres"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
subtle = "2"
rand = "0.8"
hex = "0.4"
data-encoding = "2"
crc16 = "0.4"
ed25519-dalek = "2"
stellar-xdr = { version = "26.0.1", features = ["curr", "base64"] }
async-stream = "0.3"
futures-util = "0.3"
# Off-chain note-tree path server (reuses the contract's exact Poseidon2 via a local Soroban host).
mosaic-indexer = { path = "../tools/indexer" }
soroban-sdk = { version = "26.0.1", features = ["testutils", "hazmat-crypto"] }
