[workspace]
resolver = "2"
members = ["host", "methods"]

[workspace.dependencies]
# Steel lives outside this repo (the PICO/bless checkout). Path mirrors the upstream
# steel/examples/events layout; see bridge-prover/README.md for the required checkout location.
risc0-steel = { path = "../../PICO/bless/steel/crates/steel" }

# risc0 monorepo dependencies.
risc0-build = { version = "3.0" }
risc0-zkvm = { version = "3.0" }
# encode_seal: turns a Receipt into the selector-prefixed seal the RISC Zero verifier expects.
risc0-ethereum-contracts = { version = "3.0.1" }

alloy-primitives = { version = "1.5" }
alloy-sol-types = { version = "1.5" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
bridge-methods = { path = "methods" }
tokio = { version = "1.39", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }
log = { version = "0.4" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
