[workspace]
resolver = "2"
members = ["host", "methods"]

[workspace.dependencies]
# Steel's canonical home is github.com/boundless-xyz/steel (risc0-ethereum's op-steel now redirects
# there). Pinned to a public release tag so the prover builds standalone — no external checkout. Base
# is an OP-stack chain, so we use the OP abstraction (risc0-op-steel) and prove deposits via a
# state/view-call (eth_getProof), not events (OP receipts carry a type-0x7e deposit tx the Ethereum
# receipt decoder rejects). See README.
risc0-op-steel = { git = "https://github.com/boundless-xyz/steel", tag = "v3.0.0" }

# risc0 monorepo dependencies.
risc0-build = { version = "3.0" }
risc0-zkvm = { version = "3.0" }
# encode_seal: turns a Receipt into the selector-prefixed seal the RISC Zero verifier expects.
risc0-ethereum-contracts = { version = "3.0.1" }

alloy-primitives = { version = "1.5" }
alloy-sol-types = { version = "1.5" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
bridge-methods = { path = "methods" }
tokio = { version = "1.39", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5" }
log = { version = "0.4" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
