[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
bridge-methods = { workspace = true }
log = { workspace = true }
risc0-op-steel = { workspace = true, features = ["host"] }
# `prove` enables the local prover backend (default_prover with RISC0_PROVER=local). The STARK->Groth16
# wrap additionally shells out to Docker. Add "metal" (Apple GPU) or "cuda" to this list for speed.
risc0-zkvm = { workspace = true, features = ["prove"] }
risc0-ethereum-contracts = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
# alloy's HTTP transport (pulled transitively via risc0-op-steel) uses reqwest, but nothing in this
# dep tree enables a TLS backend on it — so an https:// RPC (Alchemy/Infura) fails at runtime with
# "invalid URL, scheme is not http". We don't call reqwest directly; this dep exists only so cargo's
# feature unification turns on rustls (self-contained: aws-lc-rs provider + platform cert verifier)
# for the reqwest the transport already uses. Keep the version aligned with the locked 0.13.x.
reqwest = { version = "0.13", features = ["rustls"] }
