[package]
name = "settlement"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Matched to Nethermind's workspace pin so the verifier crate and this crate share one soroban-sdk.
soroban-sdk = { version = "26.0.1", default-features = false, features = ["alloc"] }
# Vendored Nethermind UltraHonk verifier (native BN254 host fns). NOTE: path into gitignored
# vendor/; this contract does not build standalone without it (acceptable for the spike).
ultrahonk_soroban_verifier = { path = "../../vendor/rs-soroban-ultrahonk/crates/ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", default-features = false, features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"
strip = true
