[package]
name = "bridge-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
alloy-primitives = { version = "1.5.3", features = ["tiny-keccak"] }
alloy-sol-types = { version = "1.5" }
# Steel lives outside this repo; OP abstraction (Base is OP-stack). Mirrors steel/examples/op/l2.
risc0-op-steel = { path = "../../../../PICO/bless/steel/crates/op-steel" }
risc0-zkvm = { version = "3.0", default-features = false, features = ["std", "unstable"] }

[patch.crates-io]
# enable RISC Zero's precompiles
blst = { git = "https://github.com/risc0/blst", tag = "v0.3.16-risczero.0" }
c-kzg = { git = "https://github.com/risc0/c-kzg-4844", tag = "v2.1.7-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.9-risczero.0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
